--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🌎</text></svg>">
   <title>Luiz Alcântara - Portfolio</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   <style>
@@ -167,7 +168,7 @@
   </header>
 
   <section class="section intro">
-    <img src="C:\Users\User\Desktop\trabalhos\portifolio\WhatsApp Image 2025-06-29 at 10.34.45.jpeg" alt="">
+    
     <h2 data-en="Luiz Alcântara" data-pt="Luiz Alcântara">Luiz Alcântara</h2>
     <p data-en="IT Technician | Future Systems Analyst | Technology Enthusiast" data-pt="Técnico de Informática | Futuro Analista de Sistemas | Apaixonado por tecnologia">IT Technician | Future Systems Analyst | Technology Enthusiast</p>
     <a href="#contato" class="btn" data-en="Contact" data-pt="Contato">Contact</a>
@@ -177,8 +178,8 @@
     </div>
   </section>
 
-  <section id="sobre" class="section">
-    <h2 data-en="About me" data-pt="Sobre mim">About me</h2>
+  
+    <img src="./4D4D10EF-3604-46CC-A842-0B345CC620E4.jpeg" alt="Luiz Alcântara" style="width: 150px; border-radius: 50%; margin: 20px auto;">
     <p data-en="I'm Luiz, a network technician and Information Systems student. I've been passionate about technology since I was a child and always sought to understand how things work in the digital world."
        data-pt="Sou o Luiz, técnico em redes e estudante de Sistemas de Informação. Tenho paixão por tecnologia desde criança e sempre busquei entender como as coisas funcionam no mundo digital.">I'm Luiz...</p>
     <p data-en="I currently work with support and infrastructure, but I'm transitioning into cybersecurity, where I plan to specialize. I'm curious, self-taught, and determined to grow professionally and help others with my knowledge."
