--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
   </header>
 
   <section class="section intro" id="sobre">
-    <img src="C:\Users\User\Desktop\trabalhos\portifolio\.4D4D10EF-3604-46CC-A842-0B345CC620E4.jpeg.jpeg" alt="">
+    <img src="https://i.pinimg.com/736x/fc/87/64/fc87641eccddb24ac2fe88bf5b1c7658.jpg" alt="">
     <h2>Luiz Alcântara</h2>
     <p>Técnico de Informática | Futuro Analista de Sistemas | Apaixonado por tecnologia</p>
     <a href="#contato" class="btn">Contato</a>
