--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div class="container">
-            <img src="https://i.pinimg.com/736x/4b/ab/b2/4babb20b446365ada989e2ac0b3bde50.jpg" alt="Perfil de Luiz Alcântara" class="profile-icon">
+            <img src="https://pin.it/6XpTD7T8b" alt="Perfil de Luiz Alcântara" class="profile-icon">
             <h1 id="header-title">Luiz Alcântara</h1>
             <div class="buttons">
                 <button id="theme-toggle" class="theme-toggle">Modo Escuro</button>
