--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div class="container">
-            <img src="https://pin.it/6XpTD7T8b" alt="Perfil de Luiz Alcântara" class="profile-icon">
+            <img src="https://pin.it/4iM0aca6o" alt="Perfil de Luiz Alcântara" class="profile-icon">
             <h1 id="header-title">Luiz Alcântara</h1>
             <div class="buttons">
                 <button id="theme-toggle" class="theme-toggle">Modo Escuro</button>
