--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div class="container">
-            <img src= " https://images.app.goo.gl/kZQdM " alt="Perfil de Luiz Alcântara" class="profile-icon">
+            de um jeito de inserir um avatar aqui 
             <h1 id="header-title">Luiz Alcântara</h1>
             <div class="buttons">
                 <button id="theme-toggle" class="theme-toggle">Modo Escuro</button>
