--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div class="container">
-            de um jeito de inserir um avatar aqui 
+            ###de um jeito de inserir um avatar aqui### 
             <h1 id="header-title">Luiz Alcântara</h1>
             <div class="buttons">
                 <button id="theme-toggle" class="theme-toggle">Modo Escuro</button>
