--- a/index.html
+++ b/index.html
@@ -4,14 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfólio de Luiz Alcântara</title>
-    <link rel="stylesheet" href="script.js">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
     <header>
         <div class="container">
-            ###de um jeito de inserir um avatar aqui### 
             <h1 id="header-title">Luiz Alcântara</h1>
             <div class="buttons">
                 <button id="theme-toggle" class="theme-toggle">Modo Escuro</button>
@@ -28,6 +26,7 @@
 
     <section id="sobre">
         <div class="container">
+            <img src="caminho/para/seu/avatar.jpg" alt="Avatar de Luiz Alcântara" class="avatar">
             <h2>Sobre Mim</h2>
             <p>Sou Luiz, um entusiasta da tecnologia e estudante de Sistemas de Informação. Minha jornada na tecnologia começou cedo, e estou sempre em busca de aprender e crescer na área.</p>
             <div class="social-buttons">
