--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div class="container">
-            <img src="caminho/para/seu/avatar.jpg" alt="Avatar de Luiz Alcântara" class="avatar">
+            <img src="https://i.pinimg.com/1200x/02/63/73/0263734540196ba3e4557404a2e1b128.jpg" alt="Avatar de Luiz Alcântara" class="avatar">
             <h1 id="header-title">Luiz Alcântara</h1>
             <div class="buttons">
                 <button id="theme-toggle" class="theme-toggle">Modo Escuro</button>
