--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfólio de Luiz Alcântara</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="script.js">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
@@ -64,12 +65,6 @@
                     <p data-i18n="sobre.texto5">Hoje, meu grande diferencial é essa <strong>visão global e integrada</strong>: entendo de redes, de desenvolvimento e de segurança, e ainda posso atuar em equipes multiculturais graças aos idiomas. Acredito que tecnologia de ponta se constrói com técnica, mas também com capacidade de dialogar com o mundo.</p>
                 </div>
                 
-                <div class="idiomas-badge">
-                    <span class="badge"><i class="fas fa-globe"></i> Português (Nativo)</span>
-                    <span class="badge"><i class="fas fa-globe"></i> Inglês (Avançado)</span>
-                    <span class="badge"><i class="fas fa-globe"></i> Espanhol (Avançado)</span>
-                    <span class="badge"><i class="fas fa-globe"></i> Russo (Intermediário)</span>
-                </div>
             </div>
             
             <div class="social-buttons">
